welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:17: error: unclosed character literal
    if (getDirection()=='EAST') 
                             ^SnakeBuggle:35: error: unclosed character literal
    if (getDirection()=='EAST') 
                             ^SnakeBuggle:17: error: ')' expected but something found.
    if (getDirection()=='EAST') 
                             ^SnakeBuggle:35: error: ')' expected but something found.
    if (getDirection()=='EAST') 
                             ^